components/LaptopContent/laptop-content.module.css
@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap");


.circle {
    --radius: 105px;
    --d-outer: calc(var(--radius) * 2);
    --logo-size: 150px;
    position: relative;
    width: var(--d-outer);
    height: var(--d-outer);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo {
    position: absolute;
    width: var(--logo-size);
    height: var(--logo-size);
    background: url("/images/bbmmlogo.jpeg");
    background-size: cover;
    border-radius: 50%;
}

.text {
    position: absolute;
    width: 100%;
    height: 100%;
    animation: rotateText 10s linear infinite;
}

@keyframes rotateText {
    0% {
        transform: rotate(360deg);
    }
    100% {
        transform: rotate(0deg);
    }
}

.text p span {
    position: absolute;
    left: 50%;
    font-size: 1.2em;
    transform-origin:0 calc(var(--radius));
}

